--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -138,7 +138,7 @@ spec:
           cluster: dev-gcp
         - application: familie-ba-sak
           namespace: teamfamilie
-          cluster: dev-gcp
+          cluster: dev-fss
   secureLogs:
     enabled: true
   envFrom:
