--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -25,6 +25,11 @@ spec:
     autoInstrumentation:
       enabled: true
       runtime: java
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
+
   readiness:
     path: internal/isReady
     initialDelay: 50
