--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -30,6 +30,10 @@ spec:
     autoInstrumentation:
       enabled: true
       runtime: java
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
   readiness:
     path: internal/isReady
     initialDelay: 50
