Legg til gosys i inbound policy

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -149,6 +149,9 @@ spec:
         - application: familie-integrasjoner
           namespace: teamfamilie
           cluster: prod-fss
+        - application: gosys
+          namespace: isa
+          cluster: prod-fss
   secureLogs:
     enabled: true
   envFrom:
