--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -77,6 +77,8 @@ spec:
           cluster: prod-gcp
         - application: norg2
           namespace: org
+        - application: logging
+          namespace: nais-system
     inbound:
       rules:
         - application: arbeidssokerregistrering-for-veileder
