Oppdaterer enhet-objekt i documentation.yaml

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -553,9 +553,12 @@ components:
           type: "string"
         navn:
           type: "string"
+        type:
+          type: "string"
       required:
       - "enhetId"
       - "navn"
+      - "type"
     DecoratorConfig:
       type: "object"
       properties:
