Oppdaterer documentation.yaml og litt tester for å få med enhetstype-attributtet

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -553,6 +553,8 @@ components:
           type: "string"
         navn:
           type: "string"
+        type:
+          type: "string"
       required:
       - "enhetId"
       - "navn"
